# Django-Ecommerce-API

./: .example.env  .gitignore  README.md  main.py  pyproject.toml  schemas.sql
Murphy_Threads_Backend/: .example.env  manage.py  pyproject.toml
Murphy_Threads_Backend/Cart/: serializers.py  views.py
Murphy_Threads_Backend/Murphy_Threads_Backend/: settings.py  urls.py  views.py  wsgi.py
Murphy_Threads_Backend/Orders/: CancellationViews.py  OrderViews.py  ReturnViews.py  models.py  serializers.py  signals.py  urls.py  views.py
Murphy_Threads_Backend/Payments/: StripeHandler.py  models.py  serializers.py  urls.py  views.py
Murphy_Threads_Backend/Products/: models.py  serializers.py
Murphy_Threads_Backend/Shipping/: IThinkLogisticsWrapper.py  ShiprocketWrapper.py  models.py
Murphy_Threads_Backend/Tests/: shiprocket_sample_webhok_data.json  test.py
Murphy_Threads_Backend/Users/: admin.py  models.py  serializers.py  urls.py
Murphy_Threads_Backend/Utils/: AutoField.py  DiscordWebhooks.py  Dispatcher.py  ErrorHandler.py  GetCurrentDateTime.py  Urls.py
Murphy_Threads_Backend/Webhooks/: CashFreeViews.py  StirpeViews.py  urls.py
Murphy_Threads_Backend/Wishlist/: models.py
Murphy_Threads_Backend/cart/: models.py  urls.py  views.py
Murphy_Threads_Backend/orders/: models.py  serializers.py  urls.py  views.py
Murphy_Threads_Backend/payments/: models.py  urls.py  views.py
Murphy_Threads_Backend/products/: admin.py  models.py  searializers.py  serializers.py  urls.py  views.py
Murphy_Threads_Backend/users/: admin.py  models.py  serializers.py  urls.py  views.py
Murphy_Threads_Backend/utils/: dispatcher.py  emails.py  renderers.py  urls.py
Murphy_Threads_Backend/wishlist/: models.py  serializers.py  urls.py  views.py
murphy_threads_backend/: .env  manage.py  pyproject.toml  requirements.txt  tabels.sql
murphy_threads_backend/account/: admin.py  manager.py  models.py  serializers.py  urls.py  views.py
murphy_threads_backend/administrator_management/: apps.py
murphy_threads_backend/extra/: serializers.py
murphy_threads_backend/murphy_threads_backend/: asgi.py  middleware.py  settings.py  urls.py  wsgi.py
murphy_threads_backend/orders/: admin.py  models.py
murphy_threads_backend/payments/: instamojo.py  models.py  stripe.py
murphy_threads_backend/product/: admin.py  models.py  serializers.py
murphy_threads_backend/public_view_data/: apps.py
murphy_threads_backend/registerd_user_data/: apps.py
murphy_threads_backend/utils/: emails.py
src/: .env  .env.example  manage.py
src/Cart/: models.py  urls.py
src/Django_Ecom_API/: asgi.py  settings.py  wsgi.py
src/Murphy_Threads_Backend/: asgi.py  settings.py  urls.py  views.py  wsgi.py
src/Orders/: CancellationViews.py  ReturnViews.py  admin.py  serializers.py  signals.py  urls.py
src/Payments/: CashFreeHandler.py  models.py  serializers.py  urls.py
src/Products/: models.py  serializers.py  urls.py  views.py
src/Shipping/: models.py
src/Tests/: payment_intent_sample_data.json  test.py  tests.py
src/Users/: admin.py  backends.py  models.py  serializers.py  urls.py  views.py
src/Utils/: Authentication.py  AutoField.py  DiscordWebhooks.py  Emails.py  ErrorHandler.py  GetCurrentDateTime.py  PassCheck.py  Renderers.py  Urls.py
src/Webhooks/: CashFreeViews.py  StirpeViews.py  urls.py
src/Wishlist/: models.py  serializers.py  urls.py  (+1 more)
test/: code_counter.py
(+47 files in other folders)
