[project]
name = "murphy-threads-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.5.0",
    "django>=5.2",
    "django-cors-headers>=4.7.0",
    "django-dotenv>=1.4.2",
    "django-filter>=25.1",
    "djangorestframework>=3.16.0",
    "djangorestframework-simplejwt>=5.5.0",
    "djoser>=2.3.1",
    "drf-spectacular>=0.29.0",
    "gunicorn>=25.3.0",
    "ipinfo-django>=2.0.0",
    "markdown>=3.7",
    "paypalrestsdk>=1.13.3",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.0",
    "redis>=5.2.1",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "ruff>=0.11.4",
]
